style: clean code and comments